--- a/time.html
+++ b/time.html
@@ -8,12 +8,12 @@
 <meta name="description" content="A blog about watches, covering latest news, reviews and more.">
 <meta name="keywords" content="watches, luxury, reviews, guides, blog, news">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Small Seconds</title>
+<title>Small Seconds - Time</title>
 </head>
 <body>
 
 <header>
-    <h1>SMALL SECONDS</h1>
+    <h1><a href="/">SMALL SECONDS</a></h1>
 </header>
 
 <nav>
