--- a/time.html
+++ b/time.html
@@ -8,11 +8,6 @@
 <meta name="description" content="A blog about watches, covering latest news, reviews and more.">
 <meta name="keywords" content="watches, luxury, reviews, guides, blog, news">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-    .time {
-        margin: auto;
-    }
-</style>
 <title>Small Seconds - Time</title>
 </head>
 <body>
@@ -31,14 +26,8 @@
 <section>
     
     <p style="text-align: center;">§</p>
-    
-    <h2 style="text-align: center;">Coordinated Universal Time</h2>
-    <div class="time">
-        <script src="//widget.time.is/t.js"></script>
-        <script>
-        time_is_widget.init({UTC_za00:{}});
-        </script>
-    </div>
+    <h2>Coordinated Universal Time</h2>
+    <iframe src="https://free.timeanddate.com/clock/i8oefzxk/n102/tluk/fn9/tt0/td1" frameborder="0" width="268" height="18"></iframe>
 
 </section>
 
